# file-organizer

./: .gitignore  LICENSE  README.md  organize.py  pyproject.toml
