[tool.poetry]
name = "organizer"
version = "0.1.0"
description = ""
authors = ["Laurie Voss <github@seldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index-core = "^0.10.43.post1"
llama-index-llms-groq = "^0.1.4"
llama-index-llms-openai = "^0.1.22"
python-dotenv = "^1.0.1"
llama-index-agent-lats = "^0.1.0"
llama-index-multi-modal-llms-openai = "^0.1.6"
llama-index-readers-file = "^0.1.23"
nbconvert = "^7.16.4"
docx2txt = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
